[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/Extensions/ExtensionCreator/elements/NewExtension.gd" type="Script" id=1]

[node name="NewExtension" type="ConfirmationDialog"]
margin_right = 536.0
margin_bottom = 322.0
rect_min_size = Vector2( 170, 59.5 )
window_title = "New Extension"
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0

[node name="PanelContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 520.0
margin_bottom = 242.0
size_flags_vertical = 3

[node name="TemplateManager" type="PanelContainer" parent="VBoxContainer/PanelContainer"]
self_modulate = Color( 0.352941, 0.352941, 0.352941, 1 )
margin_right = 338.0
margin_bottom = 242.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/TemplateManager"]
margin_left = 7.0
margin_top = 7.0
margin_right = 331.0
margin_bottom = 235.0

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/TemplateManager/VBoxContainer"]
margin_right = 324.0
margin_bottom = 14.0
theme_type_variation = "Header"
text = "Templates"
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/PanelContainer/TemplateManager/VBoxContainer"]
margin_top = 18.0
margin_right = 324.0
margin_bottom = 228.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="TemplateList" type="VBoxContainer" parent="VBoxContainer/PanelContainer/TemplateManager/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
margin_right = 324.0
margin_bottom = 260.0
size_flags_horizontal = 3

[node name="BARE_MINIMUM" type="Button" parent="VBoxContainer/PanelContainer/TemplateManager/VBoxContainer/ScrollContainer/TemplateList" groups=["Common"]]
margin_right = 312.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
hint_tooltip = "Contains Only the necessary things and nothing else"
disabled = true
text = "Bare Minimum"

[node name="ADD_PANNEL" type="Button" parent="VBoxContainer/PanelContainer/TemplateManager/VBoxContainer/ScrollContainer/TemplateList"]
margin_top = 44.0
margin_right = 312.0
margin_bottom = 84.0
rect_min_size = Vector2( 0, 40 )
hint_tooltip = "Contains some intuitive code
describing how to add a new panel"
text = "Add New Panel"

[node name="ADD_MENU_ITEM" type="Button" parent="VBoxContainer/PanelContainer/TemplateManager/VBoxContainer/ScrollContainer/TemplateList"]
margin_top = 88.0
margin_right = 312.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 40 )
hint_tooltip = "Contains some code
describing how to add new menu items in Top Menu."
text = "Add Menu Items"

[node name="ADD_THEME" type="Button" parent="VBoxContainer/PanelContainer/TemplateManager/VBoxContainer/ScrollContainer/TemplateList"]
margin_top = 132.0
margin_right = 312.0
margin_bottom = 172.0
rect_min_size = Vector2( 0, 40 )
hint_tooltip = "Contains some intuitive code
describing how to potentially add your own themes"
text = "Add Theme"

[node name="PROJECT_MANIPULATOR" type="Button" parent="VBoxContainer/PanelContainer/TemplateManager/VBoxContainer/ScrollContainer/TemplateList"]
margin_top = 176.0
margin_right = 312.0
margin_bottom = 216.0
rect_min_size = Vector2( 0, 40 )
hint_tooltip = "Contains some intuitive code
describing how to
Add frames, layers and such"
text = "Project Manipulator"

[node name="NEW_EXPORTER" type="Button" parent="VBoxContainer/PanelContainer/TemplateManager/VBoxContainer/ScrollContainer/TemplateList"]
margin_top = 220.0
margin_right = 312.0
margin_bottom = 260.0
rect_min_size = Vector2( 0, 40 )
hint_tooltip = "Contains some code
describing how to add your own custom exporters"
text = "Custom Exporter"

[node name="ExtensionJsonOptions" type="VBoxContainer" parent="VBoxContainer/PanelContainer"]
margin_left = 342.0
margin_right = 520.0
margin_bottom = 242.0

[node name="Name" type="HBoxContainer" parent="VBoxContainer/PanelContainer/ExtensionJsonOptions"]
margin_right = 178.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/ExtensionJsonOptions/Name"]
margin_top = 8.0
margin_right = 100.0
margin_bottom = 22.0
rect_min_size = Vector2( 100, 0 )
text = "Name:"
align = 2

[node name="NameEdit" type="LineEdit" parent="VBoxContainer/PanelContainer/ExtensionJsonOptions/Name"]
unique_name_in_owner = true
margin_left = 104.0
margin_right = 178.0
margin_bottom = 30.0
size_flags_horizontal = 3
placeholder_text = "Name of Extension"

[node name="DisplayName" type="HBoxContainer" parent="VBoxContainer/PanelContainer/ExtensionJsonOptions"]
margin_top = 34.0
margin_right = 178.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 30 )

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/ExtensionJsonOptions/DisplayName"]
margin_top = 8.0
margin_right = 100.0
margin_bottom = 22.0
rect_min_size = Vector2( 100, 0 )
text = "Display Name:"
align = 2

[node name="DisplayNameEdit" type="LineEdit" parent="VBoxContainer/PanelContainer/ExtensionJsonOptions/DisplayName"]
unique_name_in_owner = true
margin_left = 104.0
margin_right = 178.0
margin_bottom = 30.0
size_flags_horizontal = 3
placeholder_text = "Name visible to user"

[node name="Description" type="HBoxContainer" parent="VBoxContainer/PanelContainer/ExtensionJsonOptions"]
margin_top = 68.0
margin_right = 178.0
margin_bottom = 98.0
rect_min_size = Vector2( 0, 30 )

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/ExtensionJsonOptions/Description"]
margin_top = 8.0
margin_right = 100.0
margin_bottom = 22.0
rect_min_size = Vector2( 100, 0 )
text = "Description:"
align = 2

[node name="DescriptionEdit" type="LineEdit" parent="VBoxContainer/PanelContainer/ExtensionJsonOptions/Description"]
unique_name_in_owner = true
margin_left = 104.0
margin_right = 178.0
margin_bottom = 30.0
size_flags_horizontal = 3
placeholder_text = "What does this extension do?"

[node name="Author" type="HBoxContainer" parent="VBoxContainer/PanelContainer/ExtensionJsonOptions"]
margin_top = 102.0
margin_right = 178.0
margin_bottom = 132.0
rect_min_size = Vector2( 0, 30 )

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/ExtensionJsonOptions/Author"]
margin_top = 8.0
margin_right = 100.0
margin_bottom = 22.0
rect_min_size = Vector2( 100, 0 )
text = "Author:"
align = 2

[node name="AuthorEdit" type="LineEdit" parent="VBoxContainer/PanelContainer/ExtensionJsonOptions/Author"]
unique_name_in_owner = true
margin_left = 104.0
margin_right = 178.0
margin_bottom = 30.0
size_flags_horizontal = 3
placeholder_text = "Your own name?"

[node name="License" type="HBoxContainer" parent="VBoxContainer/PanelContainer/ExtensionJsonOptions"]
margin_top = 136.0
margin_right = 178.0
margin_bottom = 166.0
rect_min_size = Vector2( 0, 30 )

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/ExtensionJsonOptions/License"]
margin_top = 8.0
margin_right = 100.0
margin_bottom = 22.0
rect_min_size = Vector2( 100, 0 )
text = "License:"
align = 2

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/PanelContainer/ExtensionJsonOptions/License"]
margin_left = 104.0
margin_right = 178.0
margin_bottom = 30.0
size_flags_horizontal = 3
placeholder_text = "MIT, etc..."

[node name="Version" type="HBoxContainer" parent="VBoxContainer/PanelContainer/ExtensionJsonOptions"]
margin_top = 170.0
margin_right = 178.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 0

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/ExtensionJsonOptions/Version"]
margin_top = 8.0
margin_right = 100.0
margin_bottom = 22.0
rect_min_size = Vector2( 100, 0 )
text = "Version:"
align = 2

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/PanelContainer/ExtensionJsonOptions/Version"]
margin_left = 104.0
margin_right = 178.0
margin_bottom = 30.0
size_flags_horizontal = 3
min_value = 0.1
max_value = 1000.0
step = 0.001
value = 0.1
allow_greater = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/PanelContainer/ExtensionJsonOptions"]
margin_top = 204.0
margin_right = 178.0
margin_bottom = 208.0

[node name="ApiLevel" type="HBoxContainer" parent="VBoxContainer/PanelContainer/ExtensionJsonOptions"]
margin_top = 212.0
margin_right = 178.0
margin_bottom = 242.0
rect_min_size = Vector2( 0, 30 )

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/ExtensionJsonOptions/ApiLevel"]
margin_top = 8.0
margin_right = 100.0
margin_bottom = 22.0
rect_min_size = Vector2( 100, 0 )
text = "Target Api For:"
align = 2

[node name="Api" type="OptionButton" parent="VBoxContainer/PanelContainer/ExtensionJsonOptions/ApiLevel"]
margin_left = 104.0
margin_right = 133.0
margin_bottom = 30.0

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 246.0
margin_right = 520.0
margin_bottom = 250.0

[node name="Save" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 254.0
margin_right = 520.0
margin_bottom = 278.0

[node name="Label" type="Label" parent="VBoxContainer/Save"]
margin_right = 100.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 24 )
size_flags_vertical = 8
text = "Save Path:"
align = 2
valign = 1

[node name="path" type="LineEdit" parent="VBoxContainer/Save"]
unique_name_in_owner = true
margin_left = 104.0
margin_right = 451.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 8
editable = false

[node name="Choose" type="Button" parent="VBoxContainer/Save"]
margin_left = 455.0
margin_top = 4.0
margin_right = 520.0
margin_bottom = 24.0
size_flags_vertical = 8
text = "Choose?"

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 528.0
margin_bottom = 286.0
rect_min_size = Vector2( 172, 60.2 )
window_title = "Open a Directory"
mode = 2
access = 2

[node name="Error" type="AcceptDialog" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 528.0
margin_bottom = 286.0
dialog_text = "Error: Directory not created"

[connection signal="about_to_show" from="." to="." method="_on_NewExtension_about_to_show"]
[connection signal="confirmed" from="." to="." method="_on_NewExtension_confirmed"]
[connection signal="text_changed" from="VBoxContainer/PanelContainer/ExtensionJsonOptions/Name/NameEdit" to="." method="_on_Name_text_changed"]
[connection signal="text_changed" from="VBoxContainer/PanelContainer/ExtensionJsonOptions/DisplayName/DisplayNameEdit" to="." method="_on_DisplayName_text_changed"]
[connection signal="text_changed" from="VBoxContainer/PanelContainer/ExtensionJsonOptions/Description/DescriptionEdit" to="." method="_on_Description_text_changed"]
[connection signal="text_changed" from="VBoxContainer/PanelContainer/ExtensionJsonOptions/Author/AuthorEdit" to="." method="_on_Author_text_changed"]
[connection signal="text_changed" from="VBoxContainer/PanelContainer/ExtensionJsonOptions/License/LineEdit" to="." method="_on_License_text_changed"]
[connection signal="value_changed" from="VBoxContainer/PanelContainer/ExtensionJsonOptions/Version/SpinBox" to="." method="_on_Version_value_changed"]
[connection signal="item_selected" from="VBoxContainer/PanelContainer/ExtensionJsonOptions/ApiLevel/Api" to="." method="_on_Target_Api_selected"]
[connection signal="pressed" from="VBoxContainer/Save/Choose" to="." method="_on_Choose_pressed"]
[connection signal="dir_selected" from="FileDialog" to="." method="_on_FileDialog_dir_selected"]
